--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,11 +17,20 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* flex-direction: row; */
+  /* align-items: center; */
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+.Nav-bar {
+}
+
+li {
+  list-style-type: none;
+}
+.fa-circle-arrow-up {
+  color: rgb(7, 7, 7);
 }
 
 .App-link {
