--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -1,5 +1,5 @@
 footer {
-  background-color: black;
+  background-color: #094EC7;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -36,7 +36,6 @@ nav a {
   color: #FFE3F0;
   margin-bottom: 10px;
   display: block;
-  padding: 10px;
   text-decoration: none;
   font-family: 'Clash Grotesk', sans-serif;
 }
@@ -75,18 +74,13 @@ nav a {
   box-sizing: border-box;
 }
 
-.subscribe button {
-  background-color: #F7F800;
-  color: black;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
-  font-family: 'Clash Grotesk', sans-serif;
-  font-weight:bold;
-}
+
 
 .subscribe h3{
   font-family: 'Clash Grotesk', sans-serif;
   font-weight:lighter;
+}
+
+button{
+  color:blue;
 }
