--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -1,3 +1,11 @@
-.navbar-links ul li{
-    color:black;
-}
+.Navbar-container {
+    padding: 20px;
+    position: absolute;
+    z-index:2;
+  }
+
+  .navbar-logo {
+    width: 50px;
+    height: 30px;
+    box-sizing: border-box;
+  }
