created buttons join, become, log in, created form Log in, create account, overlau menu , overlay menu logged in, hamburger, headermobile, diff icons, text landing,

--- a/frontend/src/styles/ArrowLink.css
+++ b/frontend/src/styles/ArrowLink.css
@@ -1,21 +1,24 @@
-.menu-item-container {
+/* .menu-item-container {
   display: flex;
-  align-items: center;
-}
 
-.arrow-container {
-  /* justify-content: space-evenly; */
+} */
+
+/* .arrow-container { */
+/* justify-content: space-evenly; */
+/* display: flex;
+  flex-direction: column;
   width: 22px;
   height: 22px;
   padding-left: 135px;
-  padding-right: 10px;
-  /* flex: none;
+  padding-right: 10px; */
+/* flex: none;
   order: 1;
   flex-grow: 0; */
-}
-.arrow-icon {
-  /* align-items: flex-end; */
-}
+/* } */
+/* .arrow-icon {
+  padding: 2px;
+  align-items: flex-end;
+} */
 
 /* top: 9px;
   left: 222px; */
