--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -7,21 +7,21 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
-  padding-left:60px;
-  margin:0;
-  margin-top:20px;
-  box-sizing:border-box;
+  padding-left: 60px;
+  margin: 0;
+  margin-top: 20px;
+  box-sizing: border-box;
 }
 
 footer h2 {
   font-size: 18px;
-  color: #FFE3F0;
+  color: #ffe3f0;
   margin-bottom: 10px;
   font-weight: bold;
 }
 
 footer h3 {
-  color:#FFE3F0;
+  color: #ffe3f0;
   font-size: 16px;
   white-space: nowrap;
 }
@@ -33,12 +33,12 @@ nav {
 }
 
 nav a {
-  color: #FFE3F0;
+  color: #ffe3f0;
   margin-bottom: 10px;
   display: block;
   padding: 10px;
   text-decoration: none;
-  font-family: 'Clash Grotesk', sans-serif;
+  font-family: "Clash Grotesk", sans-serif;
 }
 
 .subscription-section {
@@ -51,9 +51,9 @@ nav a {
 
 .subscription-section h2 {
   margin-bottom: 10px;
-  color: #FFE3F0;
-  font-family: 'Clash Grotesk', sans-serif;
-  font-weight:bold;
+  color: #ffe3f0;
+  font-family: "Clash Grotesk", sans-serif;
+  font-weight: bold;
 }
 
 .subscribe {
@@ -61,7 +61,6 @@ nav a {
   flex-direction: column;
   align-items: flex-start;
   margin-top: 10px;
-
 }
 
 .subscribe input[type="text"] {
@@ -76,17 +75,17 @@ nav a {
 }
 
 .subscribe button {
-  background-color: #F7F800;
+  background-color: #f7f800;
   color: black;
   border: none;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
-  font-family: 'Clash Grotesk', sans-serif;
-  font-weight:bold;
+  font-family: "Clash Grotesk", sans-serif;
+  font-weight: bold;
 }
 
-.subscribe h3{
-  font-family: 'Clash Grotesk', sans-serif;
-  font-weight:lighter;
+.subscribe h3 {
+  font-family: "Clash Grotesk", sans-serif;
+  font-weight: lighter;
 }
