--- a/frontend/src/styles/JoinButton.css
+++ b/frontend/src/styles/JoinButton.css
@@ -14,6 +14,7 @@
   color: #094ec7 !important;
   transition: color 0.3s, background 0.3s;
   text-decoration: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 /*.btn-primary*/
 .btn:hover {
