--- a/frontend/src/styles/LogInButton.css
+++ b/frontend/src/styles/LogInButton.css
@@ -1,4 +1,4 @@
-.btn.btn-join {
+.btn.btn-login {
   width: 161px;
   height: 50px;
   border-radius: 6px;
@@ -9,7 +9,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 18px;
-  color: #f7f800;
+  color: #f7f800 !important;
   transition: color 0.3s, background 0.3s;
   text-decoration: none;
 }
@@ -19,14 +19,14 @@
   color: #094ec7 !important;
 }
 
-button.btn.btn-join {
+button.btn.btn-login {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   margin-top: 40px;
   padding: 16px 24px;
   gap: 8px;
-  width: 92px;
+  width: 94px;
   height: 50px;
   background: #094ec7;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
