--- a/frontend/src/styles/FavIcons.css
+++ b/frontend/src/styles/FavIcons.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding-left: 10px;
+  /* padding-left: 10px; */
   /* gap: 22px; */
   /* display: flex;
   flex-wrap: wrap;
