Atempt to re-fix CarouselCard and the next/prev arrows that seems to be overritten from other components. While on it, SlideInCartMenu, is nor prio or the real "checkout"-component but had the urge to work on it. Atempt to get PopularCategoriesCard-sektion to wrok with prop cardData. No success Adding the Scorebord, this makes it seem that navbar is not there but it is, need Navbar to be styled for this specific component. Making backend resond again with the database. line was accedently outcommented

--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -2,6 +2,8 @@
   padding: 20px;
   position: absolute;
   z-index: 2;
+  /* position: sticky;
+  background-color: #094ec7; */
 }
 
 .navbar-logo {
