--- a/frontend/src/styles/SlideInCartMenu.css
+++ b/frontend/src/styles/SlideInCartMenu.css
@@ -1,17 +1,23 @@
 #slideInCartMenu-container {
   font-family: "Clash Grotesk";
   background-color: #094ec7;
-  padding: 20px;
+  /* padding: 20px; */
   position: fixed;
+  /* width: 90%; */
   bottom: 0;
   left: 50%;
   transform: translateX(-50%) translateY(100%);
   transition: transform 0.3s;
+}
+#flyoutMenu {
   z-index: 9999;
 }
 
 #slideInCartMenu-text {
   color: #f7f800;
+}
+.price {
+  font-size: small;
 }
 
 #slideInCartMenu-button {
@@ -31,22 +37,62 @@
   transform: translateX(-50%) translateY(0);
 }
 
-.menu-container {
+#slideInCartMenu-button {
+  /* button */
+
+  /* Auto layout */
+
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 16px 24px;
   gap: 8px;
-  width: 318px;
+  margin-bottom: 5px;
+
+  width: 300px;
   height: 62px;
+
+  /* Secondary/yellow */
+
   background: #f7f800;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 6px;
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 4;
+  flex-grow: 0;
+}
+
+.menu-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* padding: 16px 24px; */
+  gap: 8px;
+  /* width: 80%; */
+  /* height: 450px; */
+  /* background: #f7f800; */
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: 9999;
+}
+.inner-container-text {
+  margin: 10px;
 }
 
 .menu-container img {
   width: 100%;
-  max-width: 200px;
-  height: auto;
+}
+
+/* line-height: var(--bs-body-line-height); */
+
+#slideInCart-cross {
+  font-size: smaller;
+}
+.slideInCart-cross-container {
+  display: flex;
+  flex-direction: row;
 }
